test/parser/func_decl_eof1.0.stderr
<source>:3:8: error: expected parameter declarator
    3 | fn foo(
      |        ^
<source>:3:8: error: expected ')', found 'EOF'
