test/parser/func_decl_eof1.p
//# RUN: peony %s

fn foo(
//~^ ERROR: expected parameter declarator
//~| ERROR: expected ')', found 'EOF'
